# smserver-rs-sdk

./: .gitignore  Cargo.toml  what_i_want
derive_commands/: Cargo.toml
derive_commands/src/: lib.rs
src/: api.rs  commands.rs  config.rs  error.rs  lib.rs  models.rs  registration_type.rs  rest_api.rs
src/socket/: mod.rs  socket_handler.rs  socket_response.rs
