[package]
name = "smserver-rs-sdk"
version = "0.1.0"
authors = ["iandwelker <iandwelker@gmail.com>"]
edition = "2018"

[dependencies]
native-tls = "0.2.7"
tokio-tungstenite = { version = "0.14.0", features = ["native-tls"] }
url = "2.2.1"
tokio = { version = "1.5.0" }
tokio-native-tls = "0.3.0"
futures-util = "0.3.14"
anyhow = "1.0.40"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
reqwest = { version = "0.11.3", features = ["native-tls", "multipart"] }
thiserror = "1.0"
derive_commands = { path = "./derive_commands" }
uuid = { version = "0.8.2", features = ["v4"] }
base64 = "0.13.0"
dashmap = "4.0.2"
